// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpriteSelectorItemComponent matches snapshot when given a number and details to show 1`] = `
<div
  className="ponies undefined"
>
  <button
    aria-pressed={true}
    className="react-contextmenu-wrapper"
    onClick={[MockFunction]}
    onContextMenu={[Function]}
    onMouseDown={[Function]}
    onMouseOut={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <div>
      5
    </div>
    <div>
      <div>
        <img
          draggable={false}
          loading="lazy"
          src="https://scratch.mit.edu/foo/bar/pony"
        />
      </div>
    </div>
    <div>
      <div>
        Pony sprite
      </div>
      <div>
        480 x 360
      </div>
    </div>
  </button>
  <button
    aria-label="Delete"
    className=""
    disabled={false}
    onClick={[MockFunction]}
    tabIndex={0}
    type="button"
  >
    <div>
      <img
        alt="Delete"
        draggable={false}
        src="test-file-stub"
      />
    </div>
  </button>
  <nav
    className="react-contextmenu"
    onContextMenu={[Function]}
    onMouseLeave={[Function]}
    role="menu"
    style={
      {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "fixed",
      }
    }
    tabIndex="-1"
  >
    <div
      aria-disabled="false"
      aria-orientation={null}
      className="react-contextmenu-item"
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onTouchEnd={[Function]}
      role="menuitem"
      tabIndex="-1"
    >
      <span>
        delete
      </span>
    </div>
  </nav>
</div>
`;

exports[`SpriteSelectorItemComponent matches snapshot when selected 1`] = `
<div
  className="ponies undefined"
>
  <button
    aria-pressed={true}
    className="react-contextmenu-wrapper"
    onClick={[MockFunction]}
    onContextMenu={[Function]}
    onMouseDown={[Function]}
    onMouseOut={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <div>
      <div>
        <img
          draggable={false}
          loading="lazy"
          src="https://scratch.mit.edu/foo/bar/pony"
        />
      </div>
    </div>
    <div>
      <div>
        Pony sprite
      </div>
    </div>
  </button>
  <button
    aria-label="Delete"
    className=""
    disabled={false}
    onClick={[MockFunction]}
    tabIndex={0}
    type="button"
  >
    <div>
      <img
        alt="Delete"
        draggable={false}
        src="test-file-stub"
      />
    </div>
  </button>
  <nav
    className="react-contextmenu"
    onContextMenu={[Function]}
    onMouseLeave={[Function]}
    role="menu"
    style={
      {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "fixed",
      }
    }
    tabIndex="-1"
  >
    <div
      aria-disabled="false"
      aria-orientation={null}
      className="react-contextmenu-item"
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onTouchEnd={[Function]}
      role="menuitem"
      tabIndex="-1"
    >
      <span>
        delete
      </span>
    </div>
  </nav>
</div>
`;
